--- a/01-fundamentos/index.html
+++ b/01-fundamentos/index.html
@@ -71,20 +71,17 @@
         <h2> Formulario</h2>
 
         <label for="nome">Nome:</label>
-        <input type="text" placeholder="Nome Completo" name="nome
-">
+        <input type="text" placeholder="Nome Completo" name="nome">
         <br>
         <br>
 
         <label for="cpf"> CPF: </label>
-        <input type="text" placeholder="000.000.000-00" name="cpf
-">
+        <input type="text" placeholder="000.000.000-00" name="cpf">
         <br>
         <br>
 
         <label for="email">Email:</label>
-        <input type="email" placeholder="xxxxx@xxxx.com" name="email
-">
+        <input type="email" placeholder="xxxxx@xxxx.com" name="email">
         <br>
         <br>
 
