--- a/02 - bootstrap/index.html
+++ b/02 - bootstrap/index.html
@@ -28,8 +28,8 @@
 
     <!--Breaking Points-->
 
-    <h1 class="text-center"> Titulo Teste</h1>
-    <p class="text-center text-sm-start"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi praesentium
+    <h1 class="text-center text-sm-start"> Titulo Teste</h1>
+    <p class="text-center text-sm-start text-xl-end"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi praesentium
         cum maiores perferendis voluptatem
         eligendi incidunt qui consequuntur necessitatibus perspiciatis facere fugiat voluptas dolor minus autem, vero
         ipsam? Corrupti, ad?</p>
@@ -53,6 +53,17 @@
     <hr>
 
 
+<p class="text-primary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis consequuntur magni libero impedit unde error dolores.</p>
+<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis consequuntur magni libero impedit unde error dolores.</p>
+<p class="text-danger">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis consequuntur magni libero impedit unde error dolores.</p>
+<p class="text-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis consequuntur magni libero impedit unde error dolores.</p>
+
+<p class="text-bg-warning">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis consequuntur magni libero impedit unde error dolores.</p>
+<p class="text-bg-danger">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis consequuntur magni libero impedit unde error dolores.</p>
+<p class="text-bg-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis consequuntur magni libero impedit unde error dolores.</p>
+
+<hr>
+
     <!--GRID-->
 
     <div class="row">
@@ -74,12 +85,6 @@
         <div class="bg-secondary col-12"> Rodapé</div>
     </div>
     </div>
-
-
-
-
-
-
 
 
     <div class="alert alert-primary" role="alert">
