--- a/ExercicioBootstrap/tabela.html
+++ b/ExercicioBootstrap/tabela.html
@@ -16,69 +16,70 @@
 </head>
 
 <body>
-    <h1> Tabela </h1>
-
-    <table class="table table-bordered border-dark">
-        <thead class="table-dark">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody class="table-group-divider">
-
-          <tr class="table-danger">
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-
-          <tr class="table-primary">
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-
-          <tr class="table-secondary">
-            <th scope="row">3</th>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
-            <td>@twitter</td>
-          </tr>
-
-          <tr class="table-warning">
-            <th scope="row">4</th>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
-            <td>AAAAAAAA</td>
-          </tr>
-
-          <tr class="table-info">
-            <th scope="row">5</th>
-            <td">Larry the Bird</td>
-            <td>@twitter</td>
-            <td>@twitter</td>
-            <td>@twitter</td>
-          </tr>
-
-          <tr class="table-sucess">
-            <th scope="row">6</th>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
-            <td>@twitter</td>
-          </tr>
-
-
-
-
-
-
-        </tbody>
-      </table>
-
+  <body>
+    <div class="container">
+        <h1 class="text-center mt-4">Tabela de Contatos</h1>
+        <table class="table table-bordered border-primary">
+            <thead>
+                <tr class="table-danger">
+                    <th class="col" colsplan="1">Nome</th>
+                    <th scope="col">Telefone</th>
+                    <th scope="col" colspan="2">Contatos</th>
+                    <th scope="col" colspan="3">Endereços</th>
+                </tr>
+                <tr class="table-danger">
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col">Email</th>
+                    <th scope="col">CEP</th>
+                    <th scope="col">UF</th>
+                    <th scope="col">Cidade</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="table-primary">João Paulo</td>
+                    <td class="table-primary">061900000001</td>
+                    <td class="table-primary">joao@teste.com</td>
+                    <td class="table-primary">72.200-000</td>
+                    <td class="table-primary">DF</td>
+                    <td class="table-primary">Ceilândia</td>
+                </tr>
+                <tr>
+                    <td>Maria João</td>
+                    <td>061900000002</td>
+                    <td>maria@teste.com</td>
+                    <td>72.200-000</td>
+                    <td>DF</td>
+                    <td>Ceilândia</td>
+                </tr>
+                <tr>
+                    <td class="table-primary">Ronaldo João</td>
+                    <td class="table-primary">061900000003</td>
+                    <td class="table-primary">ronaldo@teste.com</td>
+                    <td class="table-primary">72.200-000</td>
+                    <td class="table-primary">DF</td>
+                    <td class="table-primary">Ceilândia</td>
+                </tr>
+                <tr>
+                    <td>Pedro João</td>
+                    <td>061900000004</td>
+                    <td>pedro@teste.com</td>
+                    <td>72.200-000</td>
+                    <td>DF</td>
+                    <td>Ceilândia</td>
+                </tr>
+                <tr>
+                    <td class="table-primary">João João</td>
+                    <td class="table-primary">061900000005</td>
+                    <td class="table-primary">joao@teste.com</td>
+                    <td class="table-primary">72.200-000</td>
+                    <td class="table-primary">DF</td>
+                    <td class="table-primary">Ceilândia</td>
+                </tr>
+            </tbody>
+        </table>
+        
+    </div>
 </body>
 </html>
